# Corona

./: .gitignore  .gitmodules  CMakeLists.txt  CoronaEngine.sln  GenerateProjects.bat  LISENCE  README.md  buid_crossguid.bat  build_bullet3.bat  build_crossguid.bat  build_libjpeg_turbo.bat  build_lodepng.bat  build_opengex.bat  build_tinygltf.bat  build_zlib.bat  premake5.lua  readme.md
Asset/: Test.txt
Asset/Scene/DamagedHelmetTest/: DamagedHelmetTest.gltf
Asset/Scene/SciFiTest/: SciFiTest.gltf
Asset/Scene/test/: test.gltf
Asset/Scene/test1/: test1.gltf
Asset/Scene/test2/: test2.gltf
Asset/Shaders/: CMakeLists.txt  simple.hlsl
Asset/Shaders/HLSL/: Common.h.hlsl  LightingUtil.h.hlsl  debug.frag.cso  debug.frag.hlsl  debug.h.hlsl  debug.vert.cso  debug.vert.hlsl  default.frag.cso  default.frag.hlsl  default.h.hlsl  default.hlsl  default.vert.cso  default.vert.hlsl  pbr.frag.cso  pbr.frag.hlsl  pbr.h.hlsl  pbr.vert.cso  pbr.vert.hlsl  vsoutput.h.hlsl
Asset/Textures/: test2.jfif
CoronaEngine/: CoronaEngine.vcxproj  CoronaEngine.vcxproj.filters
CoronaEngine/Core/: BufferManager.cpp  BufferManager.h  Camera.cpp  CameraController.cpp  Color.cpp  ColorBuffer.cpp  Colorbuffer.h  CommandAllocatorPool.h  CommandContext.cpp  CommandContext.h  DepthBuffer.h  DescriptorHeap.cpp  Display.cpp  Display.h  DynamicDecriptorHeap.cpp  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  EngineTuning.cpp  EngineTuning.h  GameCore.cpp  GameCore.h  GameInput.cpp  GameInput.h  Geometry.h  GpuBuffer.cpp  GpuBuffer.h  GpuTimeManager.cpp  GpuTimeManager.h  GraphicsCommon.cpp  GraphicsCommon.h  GraphicsCore.cpp  Hash.h  ImageScaling.cpp  ImageScaling.h  ImguiManager.cpp  LinearAllocator.cpp  LinearAllocator.h  Log.cpp  Log.h  PipelineState.cpp  (+17 more)
CoronaEngine/Core/Math/: Frustum.cpp
CoronaEngine/Core/Shaders/: Sky.hlsl  defaultPS.hlsl  defaultVS.hlsl
CoronaEngine/src/: BufferManager.cpp  BufferManager.h  Color.h  Colorbuffer.h  CommandAllocatorPool.cpp  CommandListManager.cpp  CommandListManager.h  Corona.h  DepthBuffer.cpp  DescriptorHeap.h  EsramAllocator.h  GameCore.cpp  GameTimer.cpp  Geometry.cpp  GpuResource.h  GraphicsCore.cpp  GraphicsCore.h  PixelBuffer.cpp  PixelBuffer.h  Test.cpp  Test.h  Utility.h  crpch.h  filenames.txt
Editor/: CMakeLists.txt  EditorConfig.cpp  EditorLogic.cpp  EditorLogic.h
Empty/: EmptyApplication.cpp
Engine/: CMakeLists.txt
Engine/AnimationTest/: CMakeLists.txt
Engine/AnimationTest/assets/models/: triangle.gltf
Engine/AnimationTest/assets/models/sazabi_msn-04_gundam/: scene.gltf
Engine/AnimationTest/assets/shaders/: default.psh
Engine/AnimationTest/src/: GLTFViewer.cpp  ImguiDemo.cpp  ImguiDemo.hpp
Engine/CoronaEditor/: CMakeLists.txt  readme.md
Engine/CoronaEditor/assets/models/sazabi_msn-04_gundam/: license.txt
Engine/CoronaEditor/assets/shaders/: default.vsh
Engine/CoronaEditor/src/: GLTFViewer.cpp  GLTFViewer.hpp  ImguiDemo.hpp
Engine/EngineBase/: CMakeLists.txt
Engine/EngineBase/include/: EngineApp.hpp  EngineBase.hpp
Engine/EngineBase/src/: EngineApp.cpp  EngineBase.cpp
Engine/EngineBase/src/Android/: EngineAppAndroid.cpp
Engine/EngineBase/src/Emscripten/: EngineAppEmscripten.cpp
Engine/EngineBase/src/IOS/: EngineAppIOS.cpp
Engine/EngineBase/src/Linux/: EngineAppLinux.cpp
Engine/EngineBase/src/MacOS/: EngineAppMacOS.mm
Engine/EngineBase/src/TVOS/: SampleAppTVOS.cpp
Engine/EngineBase/src/UWP/: EngineAppUWP.cpp
Engine/EngineBase/src/Win32/: EngineAppWin32.cpp
Engine/EngineCore/: CMakeLists.txt
Engine/EngineCore/function/global/: global_context.cpp  global_context.h
Engine/EngineCore/function/render/: Utilities.h
Engine/EngineCore/platform/file_service/: file_service.cpp  file_service.h
Framework/Ability/: Ability.h  Animatable.h
Framework/Algorism/: aabb.h
Framework/Codec/: BMP.h
Framework/Common/: Allocator.cpp  Allocator.h  AssetLoader.cpp  AssetLoader.h  BaseApplication.cpp  BaseApplication.h  BaseSceneNode.h  BaseSceneObject.h  Buffer.h  CMakeLists.txt  ColorSpaceConversion.h  DebugManager.cpp  DebugManager.h  GfxConfiguration.h  GfxStructures.h  GraphicsManager.cpp  GraphicsManager.h  HuffmanTree.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  MemoryManager.cpp  MemoryManager.h  MyOldSceneObject.h  PhysicsManager.cpp  PhysicsManager.h  Scene.cpp  Scene.h  SceneCameraNode.h  SceneGeometryNode.h  SceneLightNode.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  SceneObject.cpp  SceneObject.h  SceneObjectCamera.h  SceneObjectDef.h  (+16 more)
Framework/Common/test/: AssetLoaderTest.cpp  CMakeLists.txt
Framework/DrawPass/: CMakeLists.txt  ForwardRenderPass.h  ForwordRenderPass.cpp
Framework/GeomMath/: CMakeLists.txt  geommath.h
Framework/Geometries/: Box.cpp  Box.h  CMakeLists.txt  ConvexHull.h  Geometry.cpp  Geometry.h  Plane.cpp  Plane.h  Polyhedron.cpp  Polyhedron.h  Sphere.cpp  Sphere.h
Framework/Interface/: IApplication.h  IDrawPass.h  IGameLogic.h  IPhysicsManager.h  IRuntimeModule.h  IShaderManager.h  ImageParser.h  Interface.h  SceneParser.h
Framework/Parser/: BMP.h  GLTF.h  HDR.h  JPEG.h  MyOldGLTF.h  OGEX.h  PNG.h
Platform/Windows/: CMakeLists.txt  D3d12Application.cpp  D3d12Application.h  D3d12ApplicationConfig.cpp  Helloengine_win.cpp  WindowsApplication.cpp  WindowsApplication.h
Platform/Windows/OpenGL/: CMakeLists.txt  Shader.h  glad.c  main.cpp
Platform/Windows/test/: CMakeLists.txt  TextureLoadTest.cpp
RHI/: CMakeLists.txt
RHI/D2d/: D2dGraphicsManager.cpp  D2dGraphicsManager.h
RHI/D3d/: CMakeLists.txt  D3d12GraphicsManager.cpp  D3d12GraphicsManager.h
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini  packages.config
Sandbox/Core/: GameApp.cpp  GameApp.h  GeometryGeneratorOld.cpp
Sandbox/src/: GameApp.cpp  Sandbox.cpp  SandboxApp.cpp  SandboxApp.h  WinMain.cpp
Test/: AssetLoaderTest.cpp  CMakeLists.txt  GeomMathTest.cpp  JpegParserTest.cpp  LibJpegTest.cpp  OgexParserTest.cpp  SceneLoadingTest.cpp  SceneObjectTest.cpp  gltfSceneManagerTest.cpp  lodepngTest.cpp  mygltfTest.cpp  tinygltfTest.cpp
(+40 files in other folders)
